templates/creditresponse-mongodb-deployment-template.yaml
apiVersion: v1
kind: Template
metadata:
  name: creditresponse-mongodb-template
  annotations:
    openshift.io/display-name: Payment Gateway Credit Response Mongodb
    description: Credit Response Mongodb for Payment Gateway.
    tags: payment gateway, creditresponsemongodb
    iconClass: icon-rh-openjdk
    openshift.io/long-description: This template deploy ${APPLICATION_NAME} mongodb for OpenShift platform.
    openshift.io/provider-display-name: Gan CK
    openshift.io/documentation-url: https://github.com/chengkuangan/pgwdemo
    openshift.io/support-url: https://github.com/chengkuangan/pgwdemo
    template.openshift.io/bindable: "false"
message: "The following service(s) have been created in your project: ${APPLICATION_NAME}.\n\nFor more information about using this template, see https://github.com/chengkuangan/pgwdemo/README.md"
labels:
  template: ${APPLICATION_NAME}
  app: ${APPLICATION_NAME}
  app-group: ${APPLICATION_NAME}
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: ${APPLICATION_NAME}
  spec:
    ports:
    - name: tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      app: ${APPLICATION_NAME}
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      version: ${APP_VERSION}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 1
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: ${APPLICATION_NAME}
    template:
      metadata:
        labels:
          app: ${APPLICATION_NAME}
          version: ${APP_VERSION}
          pgw-istio: 'true'
        annotations:
            sidecar.istio.io/inject: "true"
      spec:
        containers:
        - env:
          - name: MONGODB_USER
            value: ${MONGODB_USER}
          - name: MONGODB_PASSWORD
            value: ${MONGODB_PASSWORD}
          - name: MONGODB_ADMIN_PASSWORD
            value: ${MONGODB_ADMIN_PASSWORD}
          - name: MONGODB_ADMIN
            value: ${MONGODB_ADMIN_USER}  
          - name: MONGODB_DATABASE
            value: ${MONGODB_DATABASE}
          image: image-registry.openshift-image-registry.svc:5000/openshift/${MONGODB_IMAGE}:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 27017
            timeoutSeconds: 300
          name: ${APPLICATION_NAME}
          ports:
          - containerPort: 27017
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
                --eval="quit()"
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 300
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: ${APPLICATION_NAME}-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: ${APPLICATION_NAME}-data
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}
    test: false
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APPLICATION_NAME}
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: ${MONGODB_VOLUME_CAPACITY}
parameters:
- description: Application Name
  displayName: Application Name
  name: APPLICATION_NAME
  value: creditresponse
  required: true
- description: Database Name
  displayName: Database Name
  name: MONGODB_DATABASE
  value: creditresponse
  required: true
- description: Database User
  displayName: Database User
  name: MONGODB_USER
  value: creditresponse
  required: true
- description: Database Password
  displayName: Database Password
  name: MONGODB_PASSWORD
  value: creditresponse
  required: true
- description: Database Admin Username
  displayName: Database Admin Username
  name: MONGODB_ADMIN_USER
  value: admin
  required: true  
- description: Database Admin Password
  displayName: Database Admin Password
  name: MONGODB_ADMIN_PASSWORD
  value: creditresponse
  required: true
- description: Mongodb Version
  displayName: Mongodb Version
  name: MONGODB_VERSION
  value: "3.2"
  required: true
- description: Mongodb Volume Capacity
  displayName: Mongodb Volume Capacity
  name: MONGODB_VOLUME_CAPACITY
  value: 1Gi
  required: true
- description: Mongodb Container Image
  displayName: Mongodb Container Image
  name: MONGODB_IMAGE
  value: mongodb
  required: true
- name: APP_VERSION
  displayName: Application version
  description: Application version label
  value: v1
  required": true
