templates/customerservice-template.yaml
apiVersion: v1
kind: Template
metadata:
  name: customerservice-template
  annotations:
    openshift.io/display-name: Customer Service
    description: Customer service for Payment Gateway.
    tags: payment gateway, customerservice
    iconClass: icon-rh-openjdk
    openshift.io/long-description: This template deploy ${APPLICATION_NAME} application for OpenShift platform.
    openshift.io/provider-display-name: Gan CK
    openshift.io/documentation-url: https://github.com/chengkuangan/pgwdemo
    openshift.io/support-url: https://github.com/chengkuangan/pgwdemo
    template.openshift.io/bindable: "false"
message: "The following service(s) have been created in your project: ${APPLICATION_NAME}.\n\nFor more information about using this template, see https://github.com/chengkuangan/pgwdemo/README.md"
labels:
  template: ${APPLICATION_NAME}
  app: ${APPLICATION_NAME}
  app-group: ${APPLICATION_NAME}
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8080"
    name: ${APPLICATION_NAME}
  spec:
    ports:
    - name: http2
      port: 8090
      protocol: TCP
      targetPort: 8090
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: jolokia     # purposely set the name that is not complies with Istio naming convention so that prometheus can scrab at this port.
      port: 9779
      protocol: TCP
      targetPort: 9779
    selector:
      app: ${APPLICATION_NAME}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      fabric8.io/git-commit: 0a4f20af800dcd3edfc36aae5e2333ff1da155a2
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=customerservice&var-version=${APP_VERSION}
    labels:
      version: ${APP_VERSION}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:  
        app: ${APPLICATION_NAME}
    template:
      metadata:
        annotations:
          fabric8.io/iconUrl: img/icons/camel.svg
          fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=customerservice&var-version=${APP_VERSION}
          sidecar.istio.io/inject: "true"
        labels:
          app: ${APPLICATION_NAME}
          version: 1.0.0-SNAPSHOT
          pgw-istio: 'true'
      spec:
        containers:
        - env:
          - name: SPRING_APPLICATION_JSON
            value: '{"server":{"tomcat":{"max-threads":1}}}'
          - name: SERVICE_PORT
            value: ${SERVICE_PORT}
          - name: CUST_PROFILE_HOST
            value: ${CUST_PROFILE_HOST}
          - name: CUST_PROFILE_PORT
            value: ${CUST_PROFILE_PORT}
          - name: ACC_SERVICE_HOST
            value: ${ACC_SERVICE_HOST}
          - name: ACC_SERVICE_PORT
            value: ${ACC_SERVICE_PORT}
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: ${APPLICATION_NAME}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8091
              scheme: HTTP
            initialDelaySeconds: 180
          name: ${APPLICATION_NAME}
          ports:
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8090
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            protocol: TCP  
          readinessProbe:
            httpGet:
              path: /health
              port: 8091
              scheme: HTTP
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "1.0"
            requests:
              cpu: "0.2"
          securityContext:
            privileged: false
parameters:
- description: Application Name
  displayName: Application Name
  name: APPLICATION_NAME
  value: customerservice
  required: true
- description: Camel Service Port
  displayName: Camel Service Port
  name: SERVICE_PORT
  value: "8080"
  required: true
- description: Customer Profile Service Hostname
  displayName: Customer Profile Host
  name: CUST_PROFILE_HOST
  value: accountprofile
  required: true
- description: Customer Profile Service Port
  displayName: Customer Profile Service Port
  name: CUST_PROFILE_PORT
  required: true
  value: "8080"
- description: Account Service Hostname
  displayName: Account Service Hostname
  name: ACC_SERVICE_HOST
  required: true
  value: accountservice
- description: Account Service Port
  displayName: Account Service Port
  name: ACC_SERVICE_PORT
  value: "8080"
  required: true 
- name: APP_VERSION
  displayName: Application version
  description: Application version label
  value: 1.0.0-SNAPSHOT
  required": true
